@@ -1,3 +1,9 @@
+2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter/Person.cs: ADded avatar events from ProviderUser
+	* Banter/PersonCard.cs: Added event handlers from person for avatar
+	  changes
+
 2007-05-11  Brady Anderson <banderso@novell.com> 
 
 	* Banter/ProviderUser.cs: added delegate and events for avatars
